--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* .tabulator-col-content {
+.tabulator-col-content {
   background-color: green !important;
 }
 
@@ -13,7 +13,7 @@
 .tabulator-table {
   display: flex !important;
   flex-direction: column !important;
-} */
+}
 
 *, ::before, ::after {
   margin: 0;
